[package]
name = "image-qoi"
version = "0.1.0"
edition = "2021"
authors = ['Conrad Ludgate <conradludgate@gmail.com>']
license = 'MIT/Apache-2.0'
description = 'Quote Ok Image format with interop with Image'
repository = 'https://github.com/conradludgate/image-qoi'

[dependencies]
image = "0.24"

[dev-dependencies]
test-case = "2.0.2"
